[package]
name = "async-workshop"
version = "0.1.0"
authors = ["Audun Halland <audun.halland@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.5", features = ["ws"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
async-graphql = { version = "4", features = ["dataloader", "uuid", "time"] }
async-graphql-axum = "4"
futures = "0.3"
uuid = "1"
thiserror = "1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
entrait = { version = "0.5", features = ["unimock", "use-boxed-futures"] }
unimock = "0.4"

[dev-dependencies]
dotenv = "0.15"
url = "2.0"
